--- a/CE_Fortran_Chapter_10.6 (OBJ)-Copy1.ipynb
+++ b/CE_Fortran_Chapter_10.6 (OBJ)-Copy1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "4a3bb30f",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
     "        for j in range(self.J-2, self.JR-2, -1):\n",
     "            if j%5 ==0:\n",
     "                print('Age {} - {} Done'.format(j+1, j+5))\n",
-    "            results = Parallel(n_jobs=8)(delayed(ParaPort)(i, age = j) for i in range(1, self.NA))\n",
+    "            results = Parallel(n_jobs=18)(delayed(ParaPort)(i, age = j) for i in range(1, self.NA))\n",
     "            for i in range(1, self.NA):\n",
     "                    Ω[j,i,:] = results[i-1]\n",
     "            Ω[j,0,:] = Ω[j,1,:]\n",
@@ -494,7 +494,7 @@
     "            interpolate(j)\n",
     "            interpolateRHS(j)\n",
     "            \n",
-    "            results = Parallel(n_jobs=8)(delayed(ParaCon)(ix, age = j) for ix in range(self.NX))\n",
+    "            results = Parallel(n_jobs=18)(delayed(ParaCon)(ix, age = j) for ix in range(self.NX))\n",
     "            for ix in range(self.NX):\n",
     "                Var[j,ix,:] = results[ix][0]\n",
     "                aplus[j,ix,:] = results[ix][1]\n",
@@ -504,7 +504,7 @@
     "        for j in range(self.JR-2, -1, -1):\n",
     "            if j%5 ==0:\n",
     "                print('Age {} - {} Done'.format(j+1, j+5))\n",
-    "            results = Parallel(n_jobs=8)(delayed(ParaPort)(i, age = j) for i in range(1, self.NA))\n",
+    "            results = Parallel(n_jobs=18)(delayed(ParaPort)(i, age = j) for i in range(1, self.NA))\n",
     "            for i in range(1, self.NA):\n",
     "                Ω[j,i,:] = results[i-1]\n",
     "            Ω[j,0,:] = Ω[j,1,:]\n",
@@ -517,7 +517,7 @@
     "            \n",
     "            interpolateRHS(j)\n",
     "            \n",
-    "            results = Parallel(n_jobs=8)(delayed(ParaCon)(ix, age = j) for ix in range(self.NX))\n",
+    "            results = Parallel(n_jobs=18)(delayed(ParaCon)(ix, age = j) for ix in range(self.NX))\n",
     "            for ix in range(self.NX):\n",
     "                Var[j,ix,:] = results[ix][0]\n",
     "                aplus[j,ix,:] = results[ix][1]\n",
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b9e14df3",
    "metadata": {},
    "outputs": [
@@ -747,37 +747,25 @@
      "text": [
       "Age 76 - 80 Done\n",
       "Age 71 - 75 Done\n",
-      "Age 66 - 70 Done\n",
-      "Age 61 - 65 Done\n",
-      "Age 56 - 60 Done\n",
-      "Age 51 - 55 Done\n",
-      "Age 46 - 50 Done\n",
-      "Age 41 - 45 Done\n",
-      "Age 36 - 40 Done\n",
-      "Age 31 - 35 Done\n",
-      "Age 26 - 30 Done\n",
-      "Age 21 - 25 Done\n",
-      "Age 16 - 20 Done\n",
-      "Age 11 - 15 Done\n",
-      "Age 6 - 10 Done\n",
-      "Age 1 - 5 Done\n",
-      "Age 1 - 5 Done\n",
-      "Age 6 - 10 Done\n",
-      "Age 11 - 15 Done\n",
-      "Age 16 - 20 Done\n",
-      "Age 21 - 25 Done\n",
-      "Age 26 - 30 Done\n",
-      "Age 31 - 35 Done\n",
-      "Age 36 - 40 Done\n",
-      "Age 41 - 45 Done\n",
-      "Age 46 - 50 Done\n",
-      "Age 51 - 55 Done\n",
-      "Age 56 - 60 Done\n",
-      "Age 61 - 65 Done\n",
-      "Age 66 - 70 Done\n",
-      "Age 71 - 75 Done\n",
-      "Age 76 - 80 Done\n",
-      "Wall time: 1h 2min 20s\n"
+      "Age 66 - 70 Done\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32m<timed exec>:1\u001b[0m\n",
+      "Cell \u001b[1;32mIn[2], line 81\u001b[0m, in \u001b[0;36mPortfolioChoiceRetAccounts.__init__\u001b[1;34m(self, JR, J, NW, NS, NR, NA, NX, NAR, γ, β, σζ, σε, σχ, ρ, ξ, arl, aru, argrow, ωj, τ, rf, μr, al, au, agrow, Xgrow, κ, w, ψ, eff)\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mXu \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39mτ)\u001b[38;5;241m*\u001b[39m(rf \u001b[38;5;241m+\u001b[39m μr \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mamax(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mχ)))\u001b[38;5;241m*\u001b[39mau \u001b[38;5;241m+\u001b[39m \\\n\u001b[0;32m     77\u001b[0m         \u001b[38;5;28mmax\u001b[39m((\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39mτ)\u001b[38;5;241m*\u001b[39mw\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mamax(eff[:JR\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mamax(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39meps)\u001b[38;5;241m*\u001b[39mζ[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], aru\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpa)\n\u001b[0;32m     78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mX  \u001b[38;5;241m=\u001b[39m grow_grid(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mXl, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mXu, Xgrow, NX)\n\u001b[1;32m---> 81\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maplus, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mc, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mV, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mΩ, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mVar, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mΩr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpolicy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[2], line 464\u001b[0m, in \u001b[0;36mPortfolioChoiceRetAccounts.policy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    462\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m5\u001b[39m \u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    463\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAge \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m - \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m Done\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m--> 464\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mParallel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m18\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdelayed\u001b[49m\u001b[43m(\u001b[49m\u001b[43mParaPort\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mage\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNA\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    465\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNA):\n\u001b[0;32m    466\u001b[0m         Ω[j,i,:] \u001b[38;5;241m=\u001b[39m results[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\joblib\\parallel.py:1061\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[1;34m(self, iterable)\u001b[0m\n\u001b[0;32m   1058\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_iterating \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m   1060\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backend\u001b[38;5;241m.\u001b[39mretrieval_context():\n\u001b[1;32m-> 1061\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mretrieve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1062\u001b[0m \u001b[38;5;66;03m# Make sure that we get a last message telling us we are done\u001b[39;00m\n\u001b[0;32m   1063\u001b[0m elapsed_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_start_time\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\joblib\\parallel.py:938\u001b[0m, in \u001b[0;36mParallel.retrieve\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    936\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    937\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backend, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msupports_timeout\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m--> 938\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_output\u001b[38;5;241m.\u001b[39mextend(\u001b[43mjob\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    939\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    940\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_output\u001b[38;5;241m.\u001b[39mextend(job\u001b[38;5;241m.\u001b[39mget())\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\joblib\\_parallel_backends.py:542\u001b[0m, in \u001b[0;36mLokyBackend.wrap_future_result\u001b[1;34m(future, timeout)\u001b[0m\n\u001b[0;32m    539\u001b[0m \u001b[38;5;124;03m\"\"\"Wrapper for Future.result to implement the same behaviour as\u001b[39;00m\n\u001b[0;32m    540\u001b[0m \u001b[38;5;124;03mAsyncResults.get from multiprocessing.\"\"\"\u001b[39;00m\n\u001b[0;32m    541\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 542\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfuture\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    543\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m CfTimeoutError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    544\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\concurrent\\futures\\_base.py:453\u001b[0m, in \u001b[0;36mFuture.result\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    450\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[0;32m    451\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__get_result()\n\u001b[1;32m--> 453\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_condition\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    455\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;129;01min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n\u001b[0;32m    456\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    318\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[0;32m    319\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 320\u001b[0m         \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    321\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    322\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
