--- a/CE_Fortran_Chapter_10.3 (OBJ).ipynb
+++ b/CE_Fortran_Chapter_10.3 (OBJ).ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "6106c4cf",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b4fdf118",
    "metadata": {
     "scrolled": true
@@ -558,204 +558,7 @@
       "D: Period = 42\n",
       "D: Period = 43\n",
       "D: Period = 44\n",
-      "D: Period = 45\n",
-      "D: Period = 46\n",
-      "D: Period = 47\n",
-      "D: Period = 48\n",
-      "D: Period = 49\n",
-      "D: Period = 50\n",
-      "D: Period = 51\n",
-      "D: Period = 52\n",
-      "D: Period = 53\n",
-      "D: Period = 54\n",
-      "D: Period = 55\n",
-      "D: Period = 56\n",
-      "D: Period = 57\n",
-      "D: Period = 58\n",
-      "D: Period = 59\n",
-      "D: Period = 60\n",
-      "D: Period = 61\n",
-      "D: Period = 62\n",
-      "D: Period = 63\n",
-      "D: Period = 64\n",
-      "D: Period = 65\n",
-      "D: Period = 66\n",
-      "D: Period = 67\n",
-      "D: Period = 68\n",
-      "D: Period = 69\n",
-      "D: Period = 70\n",
-      "D: Period = 71\n",
-      "D: Period = 72\n",
-      "D: Period = 73\n",
-      "D: Period = 74\n",
-      "D: Period = 75\n",
-      "D: Period = 76\n",
-      "D: Period = 77\n",
-      "D: Period = 78\n",
-      "D: Period = 79\n",
-      "Here comes the aggregation part\n",
-      "Acoh: Period = 0\n",
-      "Acoh: Period = 1\n",
-      "Acoh: Period = 2\n",
-      "Acoh: Period = 3\n",
-      "Acoh: Period = 4\n",
-      "Acoh: Period = 5\n",
-      "Acoh: Period = 6\n",
-      "Acoh: Period = 7\n",
-      "Acoh: Period = 8\n",
-      "Acoh: Period = 9\n",
-      "Acoh: Period = 10\n",
-      "Acoh: Period = 11\n",
-      "Acoh: Period = 12\n",
-      "Acoh: Period = 13\n",
-      "Acoh: Period = 14\n",
-      "Acoh: Period = 15\n",
-      "Acoh: Period = 16\n",
-      "Acoh: Period = 17\n",
-      "Acoh: Period = 18\n",
-      "Acoh: Period = 19\n",
-      "Acoh: Period = 20\n",
-      "Acoh: Period = 21\n",
-      "Acoh: Period = 22\n",
-      "Acoh: Period = 23\n",
-      "Acoh: Period = 24\n",
-      "Acoh: Period = 25\n",
-      "Acoh: Period = 26\n",
-      "Acoh: Period = 27\n",
-      "Acoh: Period = 28\n",
-      "Acoh: Period = 29\n",
-      "Acoh: Period = 30\n",
-      "Acoh: Period = 31\n",
-      "Acoh: Period = 32\n",
-      "Acoh: Period = 33\n",
-      "Acoh: Period = 34\n",
-      "Acoh: Period = 35\n",
-      "Acoh: Period = 36\n",
-      "Acoh: Period = 37\n",
-      "Acoh: Period = 38\n",
-      "Acoh: Period = 39\n",
-      "Acoh: Period = 40\n",
-      "Acoh: Period = 41\n",
-      "Acoh: Period = 42\n",
-      "Acoh: Period = 43\n",
-      "Acoh: Period = 44\n",
-      "Acoh: Period = 45\n",
-      "Acoh: Period = 46\n",
-      "Acoh: Period = 47\n",
-      "Acoh: Period = 48\n",
-      "Acoh: Period = 49\n",
-      "Acoh: Period = 50\n",
-      "Acoh: Period = 51\n",
-      "Acoh: Period = 52\n",
-      "Acoh: Period = 53\n",
-      "Acoh: Period = 54\n",
-      "Acoh: Period = 55\n",
-      "Acoh: Period = 56\n",
-      "Acoh: Period = 57\n",
-      "Acoh: Period = 58\n",
-      "Acoh: Period = 59\n",
-      "Acoh: Period = 60\n",
-      "Acoh: Period = 61\n",
-      "Acoh: Period = 62\n",
-      "Acoh: Period = 63\n",
-      "Acoh: Period = 64\n",
-      "Acoh: Period = 65\n",
-      "Acoh: Period = 66\n",
-      "Acoh: Period = 67\n",
-      "Acoh: Period = 68\n",
-      "Acoh: Period = 69\n",
-      "Acoh: Period = 70\n",
-      "Acoh: Period = 71\n",
-      "Acoh: Period = 72\n",
-      "Acoh: Period = 73\n",
-      "Acoh: Period = 74\n",
-      "Acoh: Period = 75\n",
-      "Acoh: Period = 76\n",
-      "Acoh: Period = 77\n",
-      "Acoh: Period = 78\n",
-      "Acoh: Period = 79\n",
-      "Acv: Period = 0\n",
-      "Acv: Period = 1\n",
-      "Acv: Period = 2\n",
-      "Acv: Period = 3\n",
-      "Acv: Period = 4\n",
-      "Acv: Period = 5\n",
-      "Acv: Period = 6\n",
-      "Acv: Period = 7\n",
-      "Acv: Period = 8\n",
-      "Acv: Period = 9\n",
-      "Acv: Period = 10\n",
-      "Acv: Period = 11\n",
-      "Acv: Period = 12\n",
-      "Acv: Period = 13\n",
-      "Acv: Period = 14\n",
-      "Acv: Period = 15\n",
-      "Acv: Period = 16\n",
-      "Acv: Period = 17\n",
-      "Acv: Period = 18\n",
-      "Acv: Period = 19\n",
-      "Acv: Period = 20\n",
-      "Acv: Period = 21\n",
-      "Acv: Period = 22\n",
-      "Acv: Period = 23\n",
-      "Acv: Period = 24\n",
-      "Acv: Period = 25\n",
-      "Acv: Period = 26\n",
-      "Acv: Period = 27\n",
-      "Acv: Period = 28\n",
-      "Acv: Period = 29\n",
-      "Acv: Period = 30\n",
-      "Acv: Period = 31\n",
-      "Acv: Period = 32\n",
-      "Acv: Period = 33\n",
-      "Acv: Period = 34\n",
-      "Acv: Period = 35\n",
-      "Acv: Period = 36\n",
-      "Acv: Period = 37\n",
-      "Acv: Period = 38\n",
-      "Acv: Period = 39\n",
-      "Acv: Period = 40\n",
-      "Acv: Period = 41\n",
-      "Acv: Period = 42\n",
-      "Acv: Period = 43\n",
-      "Acv: Period = 44\n",
-      "Acv: Period = 45\n",
-      "Acv: Period = 46\n",
-      "Acv: Period = 47\n",
-      "Acv: Period = 48\n",
-      "Acv: Period = 49\n",
-      "Acv: Period = 50\n",
-      "Acv: Period = 51\n",
-      "Acv: Period = 52\n",
-      "Acv: Period = 53\n",
-      "Acv: Period = 54\n",
-      "Acv: Period = 55\n",
-      "Acv: Period = 56\n",
-      "Acv: Period = 57\n",
-      "Acv: Period = 58\n",
-      "Acv: Period = 59\n",
-      "Acv: Period = 60\n",
-      "Acv: Period = 61\n",
-      "Acv: Period = 62\n",
-      "Acv: Period = 63\n",
-      "Acv: Period = 64\n",
-      "Acv: Period = 65\n",
-      "Acv: Period = 66\n",
-      "Acv: Period = 67\n",
-      "Acv: Period = 68\n",
-      "Acv: Period = 69\n",
-      "Acv: Period = 70\n",
-      "Acv: Period = 71\n",
-      "Acv: Period = 72\n",
-      "Acv: Period = 73\n",
-      "Acv: Period = 74\n",
-      "Acv: Period = 75\n",
-      "Acv: Period = 76\n",
-      "Acv: Period = 77\n",
-      "Acv: Period = 78\n",
-      "Acv: Period = 79\n",
-      "CPU times: total: 52.3 s\n",
-      "Wall time: 2min 1s\n"
+      "D: Period = 45\n"
      ]
     }
    ],
